fix header image height is smaller on mobile close #74

--- a/sites/all/themes/KBHNS/sass/_main.scss
+++ b/sites/all/themes/KBHNS/sass/_main.scss
@@ -775,7 +775,6 @@ h1
 	height:400px;
 	width:100%;
 	margin-top: 136px;
-	background-position: center -100px;
 }
 
 .page-node-42,
