--- a/sites/all/themes/KBHNS/sass/_responsive.scss
+++ b/sites/all/themes/KBHNS/sass/_responsive.scss
@@ -871,6 +871,10 @@
 		}
 	}
 	
+	#banner-inner
+	{
+		height: 275px;
+	}
 }
 
 
